--- a/.github/workflows/contributions.yml
+++ b/.github/workflows/contributions.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Update README
       run: |-
-        python my-prs.py "Bhupesh-V"
+        python my-prs.py Bhupesh-V
     - name: Push new README.md
       uses: mikeal/publish-to-github-action@master
       env:
