--- a/.github/workflows/contributions.yml
+++ b/.github/workflows/contributions.yml
@@ -4,7 +4,8 @@ on:
   push:
   workflow_dispatch:
   schedule:
-    - cron:  '12 2 * * 0'
+  # run once every month
+    - cron:  '0 0 1 * *'
 
 jobs:
   build:
