--- a/.github/workflows/contributions.yml
+++ b/.github/workflows/contributions.yml
@@ -12,6 +12,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Generate My PRs List 👀
+      uses: Bhupesh-V/moc@main
+      with:
+        username: "${{ github.actor }}"
+        filename: "my-prs.md"
     - name: Update README
       run: |-
         python3 my-prs.py Bhupesh-V
